service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hari-dev-ingress
  namespace: haridev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: hari-dev.shop
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: hari-dev-app-service
            port:
              number: 8080
            
                                                                                                                           1,1           Top
